@@ -16,10 +16,7 @@ DEB_CONFIGURE_EXTRA_FLAGS += \
 	--enable-gdk-pixbuf \
 	--enable-cogl-pango \
 	--enable-introspection=yes \
-	--enable-gl=yes \
-	--enable-xlib-egl-platform=yes \
-	--enable-cogl-gles2=yes \
-	--with-gles2-libname=libGLESv2.so.2
+	--enable-gl=yes
 
 ifeq ($(DEB_HOST_ARCH),$(findstring $(DEB_HOST_ARCH),armel armhf))
         DEB_CONFIGURE_EXTRA_FLAGS += --with-default-driver=gles2
@@ -28,7 +25,11 @@ else
 endif
 
 ifeq ($(DEB_HOST_ARCH_OS),$(findstring $(DEB_HOST_ARCH_OS),linux kfreebsd))
-        DEB_CONFIGURE_EXTRA_FLAGS += --enable-gles2=yes
+DEB_CONFIGURE_EXTRA_FLAGS += \
+	--enable-xlib-egl-platform=yes \
+	--enable-cogl-gles2=yes \
+	--with-gles2-libname=libGLESv2.so.2 \
+	--enable-gles2=yes
 endif
 
 common-binary-predeb-arch:: list-missing
