@@ -5,6 +5,8 @@ cogl (1.13.4-2) UNRELEASED; urgency=low
     debian/libcogl-gles2-12.*,
     debian/libcogl*-dev.install:
     + Split libcogl-gles2 into its own package.
+  * debian/rules:
+    + Only enable egl/gles2 on linux and kfreebsd.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 25 Mar 2013 13:44:33 +0100
 
